fix header  dashboard layout bug

--- a/css/pages.css
+++ b/css/pages.css
@@ -1,4 +1,3 @@
 .pageTitle {
   text-align: center;
-  padding-top: 20px;
 }
